[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "unpaidwork"
version = "0.1.0"
description = "Sectoral marketization engine for unpaid work"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "numpy>=2.0.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.0",
  "PyYAML>=6.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[project.scripts]
unpaidwork = "unpaidwork.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unpaidwork"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
